--- a/index.html
+++ b/index.html
@@ -1,8 +1,18 @@
 ---
 layout: page
-title: My website
-subtitle: This is where I will tell my friends way too much about me
-use-site-title: true
+#title: My website
+#subtitle: This is where I will tell my friends way too much about me
+#use-site-title: true
+bigimg:
+- "/img/head/hddrack.jpg"
+- "/img/head/pi-zero-w.jpg"
+- "/img/head/makerspace.jpg"
+- "/img/head/arduino.jpg"
+- "/img/head/console.jpg"
+- "/img/head/code.jpg"
+- "/img/head/arduino2.jpg"
+- "/img/head/cyberspace.jpg"
+- "/img/head/server.jpg"
 ---
 
 <div class="posts-list">
