--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: page
-#title: My website
+title: Welcome
+show-avatar: true
 #subtitle: This is where I will tell my friends way too much about me
-#use-site-title: true
 bigimg:
 - "/img/head/hddrack.jpg"
 - "/img/head/pi-zero-w.jpg"
@@ -13,6 +13,7 @@ bigimg:
 - "/img/head/arduino2.jpg"
 - "/img/head/cyberspace.jpg"
 - "/img/head/server.jpg"
+use-site-title: true
 ---
 
 <div class="posts-list">
@@ -66,17 +67,8 @@ bigimg:
   {% endfor %}
 </div>
 
-{% if paginator.total_pages > 1 %}
 <ul class="pager main-pager">
-  {% if paginator.previous_page %}
-  <li class="previous">
-    <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">&larr; Newer Posts</a>
+  <li>
+    <a href="{{site.baseurl}}/blog">Archive </a>
   </li>
-  {% endif %}
-  {% if paginator.next_page %}
-  <li class="next">
-    <a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}">Older Posts &rarr;</a>
-  </li>
-  {% endif %}
 </ul>
-{% endif %}
