--- a/index.html
+++ b/index.html
@@ -3,16 +3,7 @@ layout: page
 title: Welcome
 show-avatar: true
 #subtitle: This is where I will tell my friends way too much about me
-bigimg:
-- "/img/head/hddrack.jpg"
-- "/img/head/pi-zero-w.jpg"
-- "/img/head/makerspace.jpg"
-- "/img/head/arduino.jpg"
-- "/img/head/console.jpg"
-- "/img/head/code.jpg"
-- "/img/head/arduino2.jpg"
-- "/img/head/cyberspace.jpg"
-- "/img/head/server.jpg"
+bigimg: "/img/head/hddrack.jpg"
 use-site-title: true
 ---
 
