--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: page
 title: Welcome
 show-avatar: true
-subtitle: ... to my personal website about various topics
+subtitle: ... to my personal website about various topics.
 bigimg: "/img/head/hddrack.jpg"
 use-site-title: true
 ---
