--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: page
 title: Welcome
 show-avatar: true
 subtitle: ... to my personal website about various topics.
-bigimg: "/assets/img/head/hddrack.jpg"
+cover-img: "/assets/img/head/hddrack.jpg"
 use-site-title: true
 ---
 <h1 class="text-center">Recent Posts</h1>
